# Stella-VSLAM-for-Android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/jason/stellavslam/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/jason/stellavslam/android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
stella/: build.gradle.kts
stella/src/androidTest/java/org/jason/testapp/android/stella/: ExampleInstrumentedTest.kt
stella/src/main/: AndroidManifest.xml
stella/src/main/assets/: pixel_6_mono.yaml
stella/src/main/cpp/: CMakeLists.txt  native-lib.cpp
stella/src/main/cpp/native_trace/: CMakeLists.txt
stella/src/main/cpp/native_trace/include/: native_trace.h
stella/src/main/cpp/native_trace/src/: native_trace.cpp
stella/src/main/cpp/stella_vslam/: CMakeLists.txt  system.cc  system.h  tracking_module.cc  tracking_module.h
stella/src/main/cpp/stella_vslam/data/: common.cc  frame.cc  keyframe.cc  map_database.cc
stella/src/main/cpp/stella_vslam/initialize/: base.cc  perspective.cc
stella/src/main/cpp/stella_vslam/match/: projection.cc
stella/src/main/cpp/stella_vslam/module/: initializer.cc
stella/src/main/cpp/stella_vslam/solve/: common.cc  fundamental_solver.cc  homography_solver.cc
stella/src/main/cpp/vslam_tracker/: CMakeLists.txt
stella/src/main/cpp/vslam_tracker/include/: common.h  tracker_loader.hpp
stella/src/main/cpp/vslam_tracker/src/: tracker_loader.cpp
stella/src/main/java/org/jason/testapp/android/stella/: OpenCVDemoActivity.kt  StellaNative.kt
stella/src/main/java/org/jason/testapp/android/stella/tracker/: Camera2VisionTracker.kt  VSLamTracker.kt
stella/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
stella/src/main/java/org/opencv/core/: MatAt.kt
stella/src/main/res/layout/: activity_opencv_demo.xml
stella/src/main/res/values/: strings.xml
stella/src/test/java/org/jason/testapp/android/stella/: ExampleUnitTest.kt
